--- a/w10/d3/9-practice-for-week-10-combining-express-sql-short-practice-main/server/package.json
+++ b/w10/d3/9-practice-for-week-10-combining-express-sql-short-practice-main/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "sqlite3": "^5.0.2"
   },
